# demos

./: demos.toml  pyproject.toml
apps/: _mnist_data.py  pca-demo.py  pca-em-demo.py
notebooks/: bnn-demo.py  mlp-demo.py  normalising-flows-demo.py
presentations/uq-kinetics/: UQ.py
scripts/: build.py  categorize_notebooks.py  deploy-ronin-hub.sh  deploy-warwick.sh  generate_index.py  generate_mnist_data.py
server/: app.py  workshops.py
server/student/: index.html
server/workshops/L00a/: dashboard.html  keys_all.json
server/workshops/L00b/: dashboard.html  keys_all.json
