[project]
name = "sciml-demos"
version = "0.1.0"
description = "Interactive SciML demonstrations using marimo notebooks"
requires-python = ">=3.12"
dependencies = [
    # Core
    "marimo>=0.19.6",
    # Plotting
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "altair",
    # Data
    "pandas",
    "pyarrow",
    # Numerics
    "numpy==2.2.5",
    "scipy",
    # ML
    "scikit-learn==1.6.1",
    "popsregression==0.3.5",
    # Utilities
    "qrcode==8.2",
]

[project.optional-dependencies]
jax = [
    "jax",
    "jaxlib",
    "tinygp",
    "optimistix",
    "equinox",
    "optax",
]
numpyro = [
    "numpyro",
    "arviz",
    "diffrax",
    "tqdm",
]
server = [
    "fastapi",
    "uvicorn",
]
dev = [
    "uv",
]
